--- a/pOne/views/mobileDetails.ejs
+++ b/pOne/views/mobileDetails.ejs
@@ -1,7 +1,6 @@
 <h1>model names aree <%= mobileData.name %> </h1>
 <h1>model names are <%= mobileData.model %> </h1>
-<h1>model names are <%= mobileData.number %> </h1>
-<h1>model names are <%= mobileData.specification %> </h1>
+<h1>model names are <%= mobileData.type %> </h1>
 
 
 <p1>paragraph name is <%= mobileData.name%></p1>
